--- a/index.html
+++ b/index.html
@@ -1,50 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css" >
-    <title>Exame CFRV</title>
+  
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  
+  <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
+  <link rel="stylesheet" href="styles/style.css"/>
+  <title>MScore</title>
 </head>
-<body>
-    <header>
-        <div class="conteiner">
-            <img src="img/logo/logobg.png" alt="logo cfrv">
-        <h1>Centro de Formacao Ramo da Vida</h1>
-
-        </div>
-
-    </header>
-    <main>
-        <div class="conteiner"> 
-            <div class="ask">
-                <img id="imgExame" src="exame/imageExame1.jpg" alt="exame"><br>
-                <button onclick="changePage1()" id="b1"><b>1</b></button>
-                <button onclick="changePage2()" id="b2"><b>2</b></button>
-
-            </div>
-            <div class="res">
-                <form method="post" action="malito:scaybuch@gmail.com">
-                    <input type="text" name="Nome Completo:" placeholder="Nome Completo">
-                    <input type="text" name="Bilhete de Identidade:" placeholder="B.I/Cartao de Eleitoe ou Cedula">
-                    
-                    <textarea type="text" name="Respostas do Exame:" placeholder="Escreva as respostas aqui!___ex: 1. escreve  resposta" ></textarea>
-                    <button type="submit">Submeter Resposta</button>
-                </form>
-
-            </div>
-        </div>
-    </main>
-
-    <!-- section And -->
-    <section>
-        <hr>
-        @desenvolvida pela <a href="#">BSofoft Tecnologias</a>
-    </section>
-    <!-- and section -->
-
+<body style="background-image: url('fundo2.jpg'); background-repeat: no-repeat; background-size: cover;">
+  <div class="mdiv">
+  <div id="h1dv">
+    <div>
+      <img style="width:50px;" src="icon_ml.png" alt="">
+    </div>
+  <h1 style="color: rgb(240, 30, 30); ">
     
-<script src="js/main.js"></script>
+    M<mark style="background-color: #0000; color: rgb(26, 23, 96)">Score</mark>
+  </h1>
+  </div>
+    <br>
+  
+
+  <div class="bbcx">
+    <div id="text_div">
+  <div>
+    MScore e um Aplicativo de previsao de jogos de futebol em todo o mundo, com um dos 
+    melhores motores de ia de previsao , nao perque mais uma aposta , baixe ja
+  </div>
+  </div>
+  <div class="box_app">
+    <br>
+    <br>
+    <div >
+      <a href="apkmzl/com.mscore-1.5-v7a.apk" download>
+      <img src="icon_ml.png" /><br>
+      Baixar o Aplicativo MScore
+      </a>
+    </div>
+  </div>
+  <br>
+  <br>
+  </div>
+  </div>
+  <p id="pv">VERSAO: <mark id="mv" style="background-color:#2da7a300">1.5</mark></p>
+    <p id="lk"  style="color: #00000000;" >http://127.0.0.1:5000</p>
+    <br>
+    <div>
+      <h1 style="color: #00000000;">000000</h1>
+    </div>
 </body>
 </html>
